<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:fillViewport="true"
    tools:context="sadman.volme.EventActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10sp">



        <Button
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:text="@string/icon_like"
            android:fontFamily="@font/ionicons"
            android:textColor="@android:color/white"
            android:textSize="27sp"
            android:layout_margin="10sp"
            style="@style/AppTheme.RoundedCornerMaterialButton"/>

        <Button
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:text="@string/icon_chat"
        android:fontFamily="@font/ionicons"
        android:textColor="@android:color/white"
        android:textSize="27sp"
        android:layout_margin="10sp"
        style="@style/AppTheme.RoundedCornerMaterialButtonMessanger"/>


        <Button
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:text="@string/icon_followers"
            android:fontFamily="@font/ionicons"
            android:textColor="@android:color/white"
            android:textSize="27sp"
            android:layout_margin="10sp"
            style="@style/AppTheme.RoundedCornerMaterialButtonFollow"/>


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/event_cover"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_event"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/itarena" />

        <TextView
            android:id="@+id/arrow_icon_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18sp"
            android:layout_marginLeft="15sp"
            android:layout_alignParentStart="true"
            android:text="@string/icon_arrow_left"
            android:fontFamily="@font/ionicons"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20" />




        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15sp"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="8sp"
            android:text="Lviv IT Arena"
            android:textColor="#ffffff"
            android:textSize="25sp"
            android:textStyle="bold"
            android:shadowColor="#000000"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"/>

    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/event_cover"
        android:orientation="vertical">

        <TextView
            android:id="@+id/event_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15sp"
            android:layout_marginTop="15sp"
            android:text="IT Arena – найграндіозніша ІТ-подія України та Сх. Європи, яка об’єднує програмістів, дизайнерів, топ-менеджерів, PMів, бізнес аналітиків, підприємців та стартаперів для обміну досвідом та обговорення нових ІТ-трендів."
            android:textSize="13sp"
            android:textColor="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/organizator"
            android:layout_below="@id/event_quick_description"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="15sp"
            android:layout_marginTop="25sp"
            android:layout_height="25dp">

            <TextView
                android:id="@+id/organizator_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_org"
                android:fontFamily="@font/ionicons"
                android:textColor="@color/colorEcology"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/organiztor_text"
                android:layout_toRightOf="@id/organizator_icon"
                android:layout_marginLeft="10sp"
                android:layout_width="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"
                tools:text="Lviv IT Claster"
                android:layout_centerVertical="true" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/location"
            android:layout_below="@id/event_quick_description"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="15sp"
            android:layout_marginTop="15sp"
            android:layout_height="25dp">

            <TextView
                android:id="@+id/location_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_location"
                android:fontFamily="@font/ionicons"
                android:textColor="@color/colorEcology"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/location_textview"
                android:layout_toRightOf="@id/location_icon"
                android:layout_marginLeft="10sp"
                android:layout_width="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                tools:text="Арена Львів, вул. Стрийська, 199, Львів"/></RelativeLayout>

        <RelativeLayout
        android:id="@+id/calendar"
        android:layout_below="@id/event_quick_description"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="15sp"
        android:layout_marginTop="15sp"
        android:layout_height="25dp">

        <TextView
            android:id="@+id/calendar_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_calendar"
            android:fontFamily="@font/ionicons"
            android:textColor="@color/colorEcology"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/calendar_text"
            android:layout_toRightOf="@id/calendar_icon"
            android:layout_marginLeft="10sp"
            android:layout_width="wrap_content"
            android:textColor="@android:color/darker_gray"
            android:layout_height="wrap_content"
            tools:text="29 вересня - 1 жовтня"
            android:layout_centerVertical="true" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/tag"
            android:layout_below="@id/event_quick_description"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="15sp"
            android:layout_marginTop="15sp"
            android:layout_height="25dp">

            <TextView
                android:id="@+id/tag_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_tag"
                android:fontFamily="@font/ionicons"
                android:textColor="@color/colorEcology"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tag_text"
                android:layout_toRightOf="@id/tag_icon"
                android:layout_marginLeft="10sp"
                android:layout_width="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:layout_height="wrap_content"
                tools:text="ІТ"
                android:layout_centerVertical="true"/>

        </RelativeLayout>



    </LinearLayout>







</RelativeLayout>

